fix(spreadsheet): Incorrect alignment of items in Spreadsheet More formats dropdown

--- a/scss/spreadsheet/_layout.scss
+++ b/scss/spreadsheet/_layout.scss
@@ -559,8 +559,11 @@
 
     }
 
+    .k-spreadsheet-format-popup {
+        .k-item { justify-content: space-between; }
+        .k-spreadsheet-sample { order: 1; }
+    }
     .k-spreadsheet-sample {
-        float: right;
         opacity: .7;
     }
 }
